cppcheck/raw_cppcheck/432152_report.txt
pipeline_d.cpp:1:1: error: syntax error [syntaxError]
createRandomCursorExecutor(const CollectionPtr& coll,
^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

